gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/rust__eof-in-generics-angle.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 4,
        end_line: 8,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 6,
        end_line: 6,
    },
]
