gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/rust__eof-in-raw-string.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 1,
        end_line: 4,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 3,
        end_line: 4,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:missing_node",
        start_line: 6,
        end_line: 6,
    },
]
