gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/rust__unbalanced-brace.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:missing_node",
        start_line: 12,
        end_line: 12,
    },
]
